# pkg-config

./: README  main.c  meson.build
